Added fonts, lint
* Added Fonts
* Updated Settings UI
* Added tutorial page for future dev
* Added lint

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "clean": "ionic-app-scripts clean",
     "build": "ionic-app-scripts build",
     "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
+    "ionic:serve": "ionic-app-scripts serve",
+    "lint": "ionic-app-scripts tslint",
+    "prepush": "npm run lint",
   },
   "dependencies": {
     "@angular/common": "2.2.1",
@@ -27,7 +29,7 @@
     "zone.js": "0.6.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "0.0.47",
+    "@ionic/app-scripts": "^1.0.0",
     "typescript": "2.0.9"
   },
   "cordovaPlugins": [
