--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "ionic-app-scripts build",
     "ionic:build": "ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve",
-    "lint": "ionic-app-scripts tslint",
-    "prepush": "npm run lint",
+    "lint": "ionic-app-scripts lint",
+    "prepush": "npm run lint"
   },
   "dependencies": {
     "@angular/common": "2.2.1",
