--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "ionic:build": "ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve",
     "lint": "ionic-app-scripts lint",
+    "prepush": "npm run lint",
     "pre-push": "npm run lint"
   },
   "dependencies": {
