--- a/bitrise.yml
+++ b/bitrise.yml
@@ -1,43 +1,75 @@
-format_version: 1.0.0
+format_version: 1.3.1
 default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
-
+app:
+  envs:
+  - IONIC_PROJ_DIR_PATH: ./medicine-price-registry-mobile
 workflows:
-  test:
+  _ci_finish:
     steps:
-      - path::./:
-          title: Execute steps-cordova-android/step.sh
-# ----------------------------------------------------------------
-  # --- workflows to Share this step into a Step Library
-  share-this-step:
-    envs:
-      # if you want to share this step into a StepLib
-      - MY_STEPLIB_REPO_FORK_GIT_URL: git@github.com:vgaidarji/bitrise-steplib.git
-      - STEP_ID_IN_STEPLIB: cordova-android
-      - STEP_GIT_VERION_TAG_TO_SHARE: 0.9.2
-      - STEP_GIT_CLONE_URL: https://github.com/vgaidarji/steps-cordova-android.git
-    description: |-
-      If this is the first time you try to share a Step you should
-      first call: $ bitrise share
-      This will print you a guide, and information about how Step sharing
-      works. Please read it at least once!
-      As noted in the Step sharing guide you'll have to fork the
-      StepLib you want to share this step into. Once you're done with forking
-      the repository you should set your own fork's git clone URL
-      in the `.bitrise.secrets.yml` file, or here in the `envs` section,
-      as the value of the `MY_STEPLIB_REPO_FORK_GIT_URL` environment.
-      You're now ready to share this Step, just make sure that
-      the `STEP_ID_IN_STEPLIB` and `STEP_GIT_VERION_TAG_TO_SHARE`
-      environments are set to the desired values!
-      To share this Step into a StepLib you can just run: $ bitrise run share-this-step
-      Once it finishes the only thing left is to actually create a Pull Request,
-      the way described in the guide printed at the end of the process.
+    - deploy-to-bitrise-io@1.2.6:
+        run_if: '{{getenv "BITRISE_BUILD_URL" | ne ""}}'
+  _ci_setup:
     steps:
-    - script:
+    - activate-ssh-key@3.1.1:
+        run_if: '{{getenv "SSH_RSA_PRIVATE_KEY" | ne ""}}'
+    - git-clone@3.4.1: {}
+  build-android:
+    steps:
+    - change-workdir@1.0.1:
+        title: Change workdir to ionic project dir
+        inputs:
+        - opts: {}
+          path: $IONIC_PROJ_DIR_PATH
+        - is_create_path: "false"
+          opts: {}
+    - script@1.1.3:
+        title: Build the app for distribution
         inputs:
         - content: |-
             #!/bin/bash
-            set -e
-            set -x
-            bitrise share start -c ${MY_STEPLIB_REPO_FORK_GIT_URL}
-            bitrise share create --stepid ${STEP_ID_IN_STEPLIB} --tag ${STEP_GIT_VERION_TAG_TO_SHARE} --git ${STEP_GIT_CLONE_URL}
-            bitrise share finish
+            set -ex
+            #
+            npm install
+            mkdir -p www
+            ionic platform add android
+            ionic build android --prod
+            mv ./platforms/android/build/outputs/apk/android-debug.apk "${BITRISE_DEPLOY_DIR}"
+          opts: {}
+  build-ios:
+    envs:
+    - BITRISE_PROJECT_PATH: ./platforms/ios/cutePuppyPics.xcodeproj
+    - BITRISE_SCHEME: cutePuppyPics
+    steps:
+    - change-workdir@1.0.1:
+        title: Change workdir to ionic project dir
+        inputs:
+        - opts: {}
+          path: $IONIC_PROJ_DIR_PATH
+        - is_create_path: "false"
+          opts: {}
+    - script@1.1.3:
+        title: Build the app for distribution
+        inputs:
+        - content: |-
+            #!/bin/bash
+            set -ex
+            #
+            npm install
+            mkdir -p www
+            ionic platform add ios
+            ionic build ios --prod
+          opts: {}
+    - certificate-and-profile-installer@1.8.2: {}
+    - xcode-archive@2.0.4: {}
+  ci-ios:
+    before_run:
+    - _ci_setup
+    after_run:
+    - build-ios
+    - _ci_finish
+  ci-android:
+    before_run:
+    - _ci_setup
+    after_run:
+    - build-android
+    - _ci_finish
