--- a/bitrise.yml
+++ b/bitrise.yml
@@ -3,6 +3,10 @@ default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
 app:
   envs:
   - IONIC_PROJ_DIR_PATH: ./medicine-price-registry-mobile
+  # for iOS
+  - BITRISE_PROJECT_PATH: ./platforms/ios/medic.xcodeproj
+  - BITRISE_SCHEME: medicine-price-registry-mobile
+  - FORCE_TEAM_ID: 72SA8V3WYL
 workflows:
   _ci_finish:
     steps:
@@ -36,17 +40,12 @@ workflows:
             mv ./platforms/android/build/outputs/apk/android-debug.apk "${BITRISE_DEPLOY_DIR}"
           opts: {}
   build-ios:
-    envs:
-    - BITRISE_PROJECT_PATH: ./platforms/ios/cutePuppyPics.xcodeproj
-    - BITRISE_SCHEME: cutePuppyPics
     steps:
     - change-workdir@1.0.1:
         title: Change workdir to ionic project dir
         inputs:
-        - opts: {}
-          path: $IONIC_PROJ_DIR_PATH
+        - path: $IONIC_PROJ_DIR_PATH
         - is_create_path: "false"
-          opts: {}
     - script@1.1.3:
         title: Build the app for distribution
         inputs:
@@ -58,9 +57,14 @@ workflows:
             mkdir -p www
             ionic platform add ios
             ionic build ios --prod
-          opts: {}
+    - recreate-user-schemes:
+        inputs:
+        - project_path: $BITRISE_PROJECT_PATH
     - certificate-and-profile-installer@1.8.2: {}
-    - xcode-archive@2.0.4: {}
+    - xcode-archive@2.0.4:
+        inputs:
+        - force_team_id: $FORCE_TEAM_ID
+        - force_code_sign_identity: iPhone Developer
   ci-ios:
     before_run:
     - _ci_setup
