--- a/bitrise.yml
+++ b/bitrise.yml
@@ -2,7 +2,7 @@ format_version: 1.3.1
 default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
 app:
   envs:
-  - IONIC_PROJ_DIR_PATH: ./medicine-price-registry-mobile
+  - IONIC_PROJ_DIR_PATH: ./
   # for iOS
   - BITRISE_PROJECT_PATH: ./platforms/ios/medic.xcodeproj
   - BITRISE_SCHEME: medicine-price-registry-mobile
