--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "ionic-native": "2.2.11",
     "ionicons": "3.0.0",
     "rxjs": "5.0.0-beta.12",
+    "sass-lint": "^1.10.2",
+    "tslint": "^4.3.1",
     "zone.js": "0.6.26"
   },
   "devDependencies": {
